fix: :ambulance: Enable overflow on content
To make content scrollable

--- a/src/BlockedUserMyPage.css
+++ b/src/BlockedUserMyPage.css
@@ -6,6 +6,12 @@
     align-items: center;
     position: relative;
     width: auto;
+
+}
+
+.userDivWrapper {
+    overflow-y: auto;
+    height: 50vh;
 }
 
 .user {
